<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_stausview" />

    <include layout="@layout/public_include_title" />

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:fadingEdge="none"
        android:orientation="vertical"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <me.jessyan.armscomponent.commonres.other.CircleImageView
                android:id="@+id/img_company_head"
                android:layout_width="@dimen/public_width_120dp"
                android:layout_height="@dimen/public_height_120dp"
                android:layout_marginTop="@dimen/public_mar_top_50dp"
                android:src="@mipmap/app_logo" />

            <TextView
                android:id="@+id/tv_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/public_mar_left_20dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="物流公司"
                android:textColor="#ff333333"
                android:textSize="@dimen/public_font_20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/public_mar_top_15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/public_height_50dp"
                    android:layout_margin="@dimen/public_mar_left_15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/module_me_faren"
                        android:textColor="#ff999999"
                        android:textSize="@dimen/public_font_14sp" />

                    <TextView
                        android:id="@+id/tv_company_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/public_mar_top_10dp"
                        android:textColor="#ff333333"
                        android:textSize="@dimen/public_font_16sp"
                        tools:text="段家彤" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/public_height_50dp"
                    android:layout_margin="@dimen/public_mar_left_15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/module_me_lianxiren"
                        android:textColor="#ff999999"
                        android:textSize="@dimen/public_font_14sp" />

                    <TextView
                        android:id="@+id/tv_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/public_mar_top_10dp"
                        android:textColor="#ff333333"
                        android:textSize="@dimen/public_font_16sp"
                        tools:text="段家彤" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/public_height_50dp"
                    android:layout_margin="@dimen/public_mar_left_15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/module_me_lianxiren_phone"
                        android:textColor="#ff999999"
                        android:textSize="@dimen/public_font_14sp" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/public_mar_top_10dp"
                        android:textColor="#ff333333"
                        android:textSize="@dimen/public_font_16sp"
                        tools:text="13590467446" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/public_mar_left_15dp"
                    android:minHeight="@dimen/public_height_50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/module_me_address"
                        android:textColor="#ff999999"
                        android:textSize="@dimen/public_font_14sp" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/public_mar_top_10dp"
                        android:textColor="#ff333333"
                        android:textSize="@dimen/public_font_16sp"
                        tools:text="北京天安门北京天安门北京天安门北京天安门北京天安门北京天安门北京天安门北京天安门北京天安门北京天安门北京天安门" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/public_pad_left_30dp"
        android:paddingTop="@dimen/public_pad_top_10dp"
        android:paddingRight="@dimen/public_pad_right_30dp"
        android:paddingBottom="@dimen/public_pad_bottom_10dp">

        <include layout="@layout/layout_btn_submit" />
    </LinearLayout>


</LinearLayout>